--- a/BreakingNews.Presentation.AspNetCore/BreakingNews.Presentation.AspNetCore.csproj
+++ b/BreakingNews.Presentation.AspNetCore/BreakingNews.Presentation.AspNetCore.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Views\News\Form.cshtml">
+    <Content Update="Views\News\FormNews.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
   </ItemGroup>
