Adicionando Web API

--- a/BreakingNews.Services.WebApi/appsettings.json
+++ b/BreakingNews.Services.WebApi/appsettings.json
@@ -1,18 +1,8 @@
-﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=NEWDATABASEEE;Integrated Security=True;MultipleActiveResultSets=true"
-  },
+{
   "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "LogLevel": {
+      "Default": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
