--- a/BreakingNews.Services.WebApi/BreakingNews.Services.WebApi.csproj
+++ b/BreakingNews.Services.WebApi/BreakingNews.Services.WebApi.csproj
@@ -9,16 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.4" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BreakingNews.Crosscutting.Util\BreakingNews.Crosscutting.Util.csproj" />
     <ProjectReference Include="..\BreakingNews.Domain\BreakingNews.Domain.csproj" />
     <ProjectReference Include="..\BreakingNews.Infrastructure.Database\BreakingNews.Infrastructure.Database.csproj" />
   </ItemGroup>
