--- a/BreakingNews.Services.WebApi/Properties/launchSettings.json
+++ b/BreakingNews.Services.WebApi/Properties/launchSettings.json
@@ -3,10 +3,11 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49885/",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:5633",
+      "sslPort": 44343
     }
   },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
@@ -16,14 +17,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "BreakingNews.Backend": {
-      "commandName": "Project",
+    "BreakingNews.Services.WebApi": {
+      "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/news",
+      "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:49886/"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
